fix: avoid popup scrollbar due to off-by-1 error
+ increase height of subcommands by 3px

--- a/src/popup/style.css
+++ b/src/popup/style.css
@@ -275,7 +275,7 @@ footer {
     font-size: .8rem;
     color: var(--fill-12);
     > .menu-item {
-      min-height: 1.3rem;
+      min-height: 1.5rem;
       padding-left: $leftPaneWidth;
       > .icon {
         margin-right: .5rem;
